--- a/templates/p_inicio.html
+++ b/templates/p_inicio.html
@@ -104,7 +104,7 @@
                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="{{ url_for('paciente.perfil', id=get_pac.id_paciente)}}">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
+                                    Perfil
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
