--- a/templates/p_ver_especialistas.html
+++ b/templates/p_ver_especialistas.html
@@ -21,7 +21,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{url_for('paciente.inicio', id=get_pac.id_paciente)}}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Vista Principal</span></a>
+                    <span>Vista Principal</span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -36,14 +37,16 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{url_for('paciente.addFood', id=get_pac.id_paciente)}}">
                     <i class="fas fa-fw fa-utensils"></i>
-                    <span>Agregar Comidas</span></a>
+                    <span>Agregar Comidas</span>
+                </a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
                 <a class="nav-link" href="{{url_for('paciente.especialistas', id=get_pac.id_paciente)}}">
                     <i class="fas fa-fw fa-stethoscope"></i>
-                    <span>Especialistas</span></a>
+                    <span>Especialistas</span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -53,11 +56,8 @@
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
-
-
         </ul>
         <!-- End of Sidebar -->
-
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
@@ -78,14 +78,14 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{get_pac.pri_nombre}} {{get_pac.pri_apellido}}</span>
                                 <img class="img-profile rounded-circle"
-                                    src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
+                                     src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
+                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="{{ url_for('paciente.perfil', id=get_pac.id_paciente)}}">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Perfil
@@ -100,21 +100,20 @@
                     </ul>
                 </nav>
                 <!-- End of Topbar -->
-
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Vista Principal</h1>
-                        {{ formatted_date }}
+                        <h1 class="h3 mb-0 text-gray-800">Lista de Especialistas</h1>
+                        {{ date }}
                     </div>
 
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Historial de Comidas</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Especialistas Asignados</h6>
                                 </div>
                                 <div class="card-body">
                                     <ul class="list-group">
@@ -125,18 +124,37 @@
                                                 <span class="badge badge-secondary">{{ especialista.especialidad }}</span>
                                             </div>
                                             <div>
-                                                <a href="{{ url_for('paciente.detalleEspecialista', id=id, espe=especialista.id_espe) }}" class="btn btn-sm btn-outline-primary">Ver</a>
+                                                <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#especialistaModal" data-id="{{ especialista.id_espe }}">Ver</button>
                                             </div>
                                         </li>
                                         {% endfor %}
                                     </ul>
                                 </div>
-                            </div>                            
+                            </div>
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
 
+            <!-- Modal -->
+            <div class="modal fade" id="especialistaModal" tabindex="-1" role="dialog" aria-labelledby="especialistaModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="especialistaModalLabel">Detalle Especialista</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <!-- Aquí se cargará la información del especialista -->
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
@@ -148,7 +166,6 @@
         </div>
     </div>
     <!-- End of Page Wrapper -->
-
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
@@ -156,7 +173,7 @@
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -174,7 +191,6 @@
         </div>
     </div>
 
-
     <!-- Bootstrap core JavaScript-->
     <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
@@ -191,6 +207,26 @@
     <!-- Page level custom scripts -->
     <script src="{{ url_for('static', filename='js/demo/chart-area-demo.js') }}"></script>
     <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script>
+
+    <script>
+        $('#especialistaModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var especialistaId = button.data('id'); // ID del especialista desde el botón
+            
+            var modal = $(this);
+            $.ajax({
+                // Construye la URL manualmente con el id del paciente y el especialistaId
+                url: "/detalle_especialista/{{ get_pac.id_paciente }}/" + especialistaId,
+                type: "GET",
+                success: function (data) {
+                    modal.find('.modal-body').html(data);
+                },
+                error: function(xhr, status, error) {
+                    console.error("Error en la solicitud AJAX:", error);
+                }
+            });
+        });
+    </script>
 
 </body>
 
