--- a/templates/p_inicio.html
+++ b/templates/p_inicio.html
@@ -126,6 +126,28 @@
                         {{ formatted_date }}
                     </div>
 
+                    <!-- Update the modal structure in p_inicio.html -->
+                    <div class="modal fade" id="foodDetailModal" tabindex="-1" role="dialog" aria-labelledby="foodDetailModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document"> <!-- Use modal-lg or modal-xl for larger size -->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="foodDetailModalLabel">Detalle Comida</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <!-- Content will be loaded here -->
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card shadow mb-4">
@@ -149,7 +171,7 @@
                                                     {% endif %}
                                                 </div>
                                                 <div>
-                                                    <a href="{{ url_for('paciente.foodDetail', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-primary">Ver</a>
+                                                    <a href="#" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#foodDetailModal" data-date="{{ comida.fecha_ini.strftime('%Y-%m-%d %H:%M:%S') }}">Ver</a>
                                                     <a href="{{ url_for('paciente.updateFood', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-warning">Editar</a>
                                                     <a href="{{ url_for('paciente.deleteFood', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-danger">Eliminar</a>
                                                 </div>
@@ -217,7 +239,25 @@
     <!-- Page level custom scripts -->
     <script src="{{ url_for('static', filename='js/demo/chart-area-demo.js') }}"></script>
     <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script>
-
+    <script>
+        $('#foodDetailModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var date = button.data('date');
+            var modal = $(this);
+            
+            $.ajax({
+                url: "{{ url_for('paciente.foodDetail', id=get_pac.id_paciente) }}",
+                type: "GET",
+                data: { date: date },
+                success: function (data) {
+                    modal.find('.modal-body').html(data);
+                },
+                error: function () {
+                    modal.find('.modal-body').html('<p>Error loading details.</p>');
+                }
+            });
+        });
+    </script>    
 </body>
 
 {% endblock %}
