--- a/templates/p_inicio.html
+++ b/templates/p_inicio.html
@@ -72,21 +72,31 @@
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <!-- TODO: Ver Porque no funciona -->
-                    <!-- Topbar Search -->
                     <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                        action="{{url_for('paciente.inicio', id=get_pac.id_paciente)}}" method="POST">
-                        <div class="input-group">
-                            <input type="date" class="form-control bg-light border-0 small" name="pac-fecha"
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
+                    class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+                    action="{{ url_for('paciente.inicio', id=get_pac.id_paciente) }}" method="POST">
+                
+                    <div class="input-group">
+                        <input 
+                            id="fechaBusq" 
+                            type="date" 
+                            class="form-control bg-light border-0 small" 
+                            name="pac-fecha"
+                            aria-label="Search" 
+                            aria-describedby="basic-addon2"
+                        >
+                        <div class="input-group-append">
+                            <button 
+                                id="btnBuscar"
+                                class="btn btn-primary" 
+                                type="submit"
+                                disabled
+                            >
+                                <i class="fas fa-search fa-sm"></i>
+                            </button>
                         </div>
-                    </form>
+                    </div>
+                </form>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -186,12 +196,18 @@
                                                 </div>
                                                 <div>
                                                     <a href="#" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#foodDetailModal" data-date="{{ comida.fecha_ini.strftime('%Y-%m-%d %H:%M:%S') }}">Ver</a>
-                                                    <a href="#" class="btn btn-sm btn-outline-warning" data-toggle="modal" data-target="#foodEditModal" data-date="{{ comida.fecha_ini.strftime('%Y-%m-%d %H:%M:%S') }}">Editar </a>
-                                                    <a href="{{ url_for('paciente.deleteFood', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-danger">Eliminar</a>
+                                                    <a href="#" class="btn btn-sm btn-outline-warning" data-toggle="modal" data-target="#foodEditModal" data-date="{{ comida.fecha_ini.strftime('%Y-%m-%d %H:%M:%S') }}">Editar</a>
+                                                    <a href="{{ url_for('paciente.deleteFood', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-danger btn-delete">Eliminar</a>
+
                                                 </div>
+                                            </li>
+                                        {% else %}
+                                            <li class="list-group-item text-center text-muted">
+                                                No hay registro de comidas disponible
                                             </li>
                                         {% endfor %}
                                     </ul>
+                                    
                                 </div>
                             </div>                            
                         </div>
@@ -304,7 +320,41 @@
                 newAlimento.find('option:first').prop('selected', true);
                 $('#alimentos').append(newAlimento);
             });
-    </script>    
+    </script>
+    <script>
+        $(function() {
+            var $fecha  = $('#fechaBusq');
+            var $btn    = $('#btnBuscar');
+    
+            function toggleButton() {
+
+                $btn.prop('disabled', $fecha.val() === '');
+            }
+    
+            toggleButton();
+    
+            $fecha.on('input change', toggleButton);
+        });
+    </script>
+    <script>
+        $(document).ready(function() {
+          $(document).on('click', '.btn-delete', function(e) {
+            e.preventDefault();
+            const url = $(this).attr('href');
+            if (confirm('¿Estás seguro de que deseas eliminar esta comida?')) {
+              window.location.href = url;
+            }
+          });
+        });
+    </script>
+    <script>
+        $(document).on('submit', '#editFoodForm', function(e) {
+          e.preventDefault();
+          if (confirm('¿Estás seguro de que deseas guardar los cambios?')) {
+            this.submit();
+          }
+        });
+      </script>
 </body>
 
 {% endblock %}
